# pet-health-tracker

./: .gitignore  Cargo.toml  README.md
frontend/: Cargo.toml
frontend/src/: main.rs
server/: .env  Cargo.toml  test-inserts.sql
server/migration/src/: lib.rs  m20220101_000001_create_pet_medication_table.rs  m20220101_000001_create_pet_photo_table.rs  m20220101_000001_create_pet_table.rs
server/src/: main.rs
server/src/entities/: medication_type.rs  mod.rs  pet.rs  pet_medication.rs  pet_photo.rs  prelude.rs
