[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
futures = "0.3.31"
sea-orm = { version = "1.1.4", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
tower-http = {version = "0.6.2", features = ["full"]}
